# LibreArp

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  JUCE_GPL_patch.patch  LICENSE.md  LibreArp.jucer  README.md  projucer.sh
Builds/CLion/: CMakeLists.txt  Debug-Info-AU.plist  Debug-Info-Standalone_Plugin.plist  Debug-Info-VST3.plist
Builds/CodeBlocksWindows/: LibreArp.cbp
Builds/LinuxMakefile/: Makefile
Docker/librearp-linux/: Dockerfile
JuceLibraryCode/: AppConfig.h  JuceHeader.h
Scripts/: update-librearp.sh
Source/: ArpBuiltEvents.cpp  ArpBuiltEvents.h  ArpEvent.cpp  ArpEvent.h  ArpIntegrityException.cpp  ArpIntegrityException.h  ArpNote.cpp  ArpNote.h  ArpPattern.cpp  ArpPattern.h  AudioUpdatable.h  BuildConfig.cpp  BuildConfig.h  Globals.cpp  Globals.h  LibreArp.cpp  LibreArp.h  NoteData.cpp  NoteData.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Updater.cpp  Updater.h
Source/editor/: EditorState.cpp  EditorState.h  LArpLookAndFeel.cpp  LArpLookAndFeel.h  MainEditor.cpp  MainEditor.h  PatternEditorComponent.cpp  PatternEditorComponent.h  PatternEditorMainComponent.cpp  PatternEditorMainComponent.h  PatternEditorTopComponent.cpp  PatternEditorTopComponent.h  XmlEditorComponent.cpp  XmlEditorComponent.h
Source/editor/about/: AboutBox.cpp  AboutBox.h  AboutBoxConfig.h
Source/editor/behaviour/: BehaviourSettingsEditor.cpp  BehaviourSettingsEditor.h
Source/editor/generic/: Title.cpp  Title.h
Source/editor/pattern/: BeatBar.cpp  BeatBar.h  LoopEditor.h  NoteBar.cpp  NoteBar.h  PatternEditor.cpp  PatternEditor.h  PatternEditorView.cpp  PatternEditorView.h  PulseConvertor.h
Source/editor/settings/: SettingsEditor.cpp  SettingsEditor.h
Source/editor/style/: Colours.h  DragActionTolerances.h
Source/editor/xml/: XmlEditor.cpp  XmlEditor.h
Source/exception/: ArpIntegrityException.cpp  ArpIntegrityException.h
Source/util/: Defer.h  MathConsts.h  PatternUtil.cpp  PatternUtil.h
